--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <meta property="og:title" content="[대전꽃배달 둔산플라워 - 홈]" />
+
+    <meta property="og:title" content="대전꽃배달 둔산플라워 - 홈" />
     <meta property="og:description" content="대전꽃배달 서구꽃배달 둔산동 꽃배달 전국꽃배달 화환" />
     <meta property="og:image" content="/logo.jpeg" />
-    
+
     <title>대전꽃배달 둔산플라워</title>
   </head>
   <body>
